syntax = "proto3";

package playMasterPackage;

service playMaster {

    rpc pushMove(playerMove) returns (status);
    rpc receiveMove(player) returns (playerMove);
    rpc initializeGame(init) returns (status);
    rpc checkTurn(turn) returns (status);
    rpc gameEnd(player) returns(status);
}


message voidParam {}

message playerMove {
    string username = 1;
    string gameID = 2;
    string source = 3;
    string target = 4;
    bool success = 5;
    string state = 6;
}

message move {
    string source = 1;
    string target = 2;
    bool success = 3;
}

message player {
    string username = 1;
    string gameID = 2;
    string state = 3;
}

message turn {
    string gameID = 1;
    int64 turn = 2;
}

message init {
    string gameID = 1;
}

message status {
    bool success = 1;
}